k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aipclm
  labels:
    app.kubernetes.io/part-of: aipclm
